--- a/trunk/depends/ClanLib/CMakeLists.txt
+++ b/trunk/depends/ClanLib/CMakeLists.txt
@@ -37,11 +37,13 @@ set(TOTEM_SRCS ${TotemEDK_SOURCE_DIR}/src)
 set(TOTEM_HDRS ${TotemEDK_SOURCE_DIR}/include/Totem)
 set(TOTEM_SRCS_ADDONS ${TotemEDK_SOURCE_DIR}/src/Addons)
 set(TOTEM_HDRS_ADDONS ${TotemEDK_SOURCE_DIR}/include/Totem/Addons)
+set(TOTEM_CLANLIB_CONFIG_H ${TotemEDK_SOURCE_DIR}/depends/ClanLib)
 
 message(STATUS "Path to Totem src/: ${TOTEM_SRCS}")
 message(STATUS "Path to Totem include/Totem/: ${TOTEM_HDRS}")
 message(STATUS "Path to Totem src/Addons/: ${TOTEM_SRCS_ADDONS}")
 message(STATUS "Path to Totem include/Totem/Addons/: ${TOTEM_HDRS_ADDONS}")
+message(STATUS "Path to ClanLib config.h for Totem: ${TOTEM_CLANLIB_CONFIG_H}")
 message(STATUS " ")
 
 #Extract files from directories
@@ -49,10 +51,12 @@ file(GLOB totem_src_files_abs_path ${TOTEM_SRCS}/*.cpp)
 file(GLOB totem_hdr_files_abs_path ${TOTEM_HDRS}/*.h)
 file(GLOB totem_src_addon_files_abs_path ${TOTEM_SRCS_ADDONS}/*.cpp)
 file(GLOB totem_hdr_addon_files_abs_path ${TOTEM_HDRS_ADDONS}/*.h)
+file(GLOB totem_clanlib_config_hdr_abs_path ${TOTEM_CLANLIB_CONFIG_H}/*.h)
 message(STATUS "Source Files in src/ ${totem_src_files_abs_path}")
 message(STATUS "Header Files in include/Totem/ ${totem_hdr_files_abs_path}")
 message(STATUS "Source Files in src/Addons/ ${totem_src_addon_files_abs_path}")
 message(STATUS "Header Files in include/Totem/Addons/ ${totem_hdr_addon_files_abs_path}")
+message(STATUS "ClanLib config.h for Totem in depends/ClanLib/ ${totem_clanlib_config_hdr_abs_path}")
 message(STATUS " ")
 
 #Define the output paths
@@ -62,18 +66,22 @@ set(TFC_SRCS_DIR ${TOTEM_FOR_CLANLIB_OUTPUT_DIR}/src)
 set(TFC_HDRS_DIR ${TOTEM_FOR_CLANLIB_OUTPUT_DIR}/include/Totem)
 set(TFC_SRCS_ADDONS_DIR ${TOTEM_FOR_CLANLIB_OUTPUT_DIR}/src/Addons)
 set(TFC_HDRS_ADDONS_DIR ${TOTEM_FOR_CLANLIB_OUTPUT_DIR}/include/Totem/Addons)
+set(TFC_TOTEM_CLANLIB_CONFIG_DIR ${TOTEM_FOR_CLANLIB_OUTPUT_DIR}/include/Totem)
 
 message(STATUS "Output Path to Totem ClanLib src/: ${TFC_SRCS_DIR}")
 message(STATUS "Output Path to Totem ClanLib include/Totem/: ${TFC_HDRS_DIR}")
 message(STATUS "Output Path to Totem ClanLib src/Addons/: ${TFC_SRCS_ADDONS_DIR}")
 message(STATUS "Output Path to Totem ClanLib include/Totem/Addons/: ${TFC_HDRS_ADDONS_DIR}")
+message(STATUS "Output Path to Totem ClanLib config.h include/Totem/: ${TFC_TOTEM_CLANLIB_CONFIG_DIR}")
 message(STATUS " ")
 
 #Split into filenames
 set(totem_src_files)
 set(totem_hdr_files)
+set(totem_hdr_ignore_files)
 set(totem_src_addon_files)
 set(totem_hdr_addon_files)
+set(totem_clanlib_config_file)
 
 message(STATUS "src/ filenames:")
 FOREACH(f ${totem_src_files_abs_path})
@@ -95,8 +103,19 @@ message(STATUS "include/Totem/ filenames:")
 FOREACH(f ${totem_hdr_files_abs_path})
 	FILE(RELATIVE_PATH folder ${TOTEM_HDRS} ${f})
 	get_filename_component(filename ${folder} NAME)
-	set(totem_hdr_files ${totem_hdr_files}  ${filename})
-	message(STATUS "- ${filename}")
+	
+	STRING(COMPARE EQUAL ${filename} "types_config.h" string_compare_result)
+	STRING(COMPARE EQUAL ${filename} "config.h" string_compare_result2)
+	
+	if(${string_compare_result} OR ${string_compare_result2})
+		set(totem_hdr_ignore_files ${totem_hdr_ignore_files} ${f})
+		message(STATUS "THROW AWAY ${filename}")
+	endif()
+	
+	if(NOT ${string_compare_result} AND NOT ${string_compare_result2})
+		set(totem_hdr_files ${totem_hdr_files}  ${filename})
+		message(STATUS "- ${filename}")
+	endif()
 ENDFOREACH(f ${ARGN})
 message(STATUS " ")
 message(STATUS "include/Totem/Addons/ filenames:")
@@ -107,12 +126,21 @@ FOREACH(f ${totem_hdr_addon_files_abs_path})
 	message(STATUS "- ${filename}")
 ENDFOREACH(f ${ARGN})
 message(STATUS " ")
+message(STATUS "include/Totem/config.h:")
+FOREACH(f ${totem_clanlib_config_hdr_abs_path})
+	FILE(RELATIVE_PATH folder ${TOTEM_HDRS_ADDONS} ${f})
+	get_filename_component(filename ${folder} NAME)
+	set(totem_clanlib_config_file ${totem_clanlib_config_file} ${filename})
+	message(STATUS "- ${filename}")
+ENDFOREACH(f ${ARGN})
+message(STATUS " ")
 
 #Define output files with absolute paths
 set(tcp_src_files)
 set(tcp_hdr_files)
 set(tcp_src_addon_files)
 set(tcp_hdr_addon_files)
+set(tcp_clanlib_config_file)
 foreach(f ${totem_src_files})
 	set(tcp_src_files ${tcp_src_files} ${TFC_SRCS_DIR}/${f})
 endforeach()
@@ -125,11 +153,15 @@ endforeach()
 foreach(f ${totem_hdr_addon_files})
 	set(tcp_hdr_addon_files ${tcp_hdr_addon_files} ${TFC_HDRS_ADDONS_DIR}/${f})
 endforeach()
+foreach(f ${totem_clanlib_config_file})
+	set(tcp_clanlib_config_file ${tcp_clanlib_config_file} ${TFC_TOTEM_CLANLIB_CONFIG_DIR}/${f})
+endforeach()
 
 message(STATUS "Source Files to editions/clanlib/src/ ${tcp_src_files}")
 message(STATUS "Header Files to editions/clanlib/include/Totem/ ${tcp_hdr_files}")
 message(STATUS "Source Files to editions/clanlib/src/Addons/ ${tcp_src_addon_files}")
 message(STATUS "Header Files to editions/clanlib/include/Totem/Addons/ ${tcp_hdr_addon_files}")
+message(STATUS "ClanLib Config File to editions/clanlib/include/Totem/ ${tcp_clanlib_config_file}")
 message(STATUS " ")
 
 #Define where to locate FindSed.cmake
@@ -172,13 +204,24 @@ message(STATUS " ")
 #
 set(list_count)
 set(list_index 0)
-list(LENGTH tcp_hdr_files list_count)
+#list(LENGTH tcp_hdr_files list_count)
+list(LENGTH totem_hdr_files_abs_path list_count)
 foreach(input ${totem_hdr_files_abs_path})
-	list(GET tcp_hdr_files ${list_index} output)
-	message(STATUS "Evaluating index ${list_index}/${list_count}: ${output}")
-	MATH(EXPR list_index "${list_index}+1")
+	set(ignore_index 0)
+	foreach(ignore ${totem_hdr_ignore_files})
+		STRING(COMPARE EQUAL ${input} ${ignore} ignore_this_index)
+		if(${ignore_this_index})
+			set(ignore_index 1)
+		endif(${ignore_this_index})
+	endforeach(ignore ${totem_hdr_ignore_files})
 	
-	configure_file(${input} ${output} COPYONLY)
+	if(NOT ${ignore_index})
+		list(GET tcp_hdr_files ${list_index} output)
+		message(STATUS "Evaluating index ${list_index}/${list_count}: ${output}")
+		MATH(EXPR list_index "${list_index}+1")
+		
+		configure_file(${input} ${output} COPYONLY)
+	endif(NOT ${ignore_index})
 endforeach(input ${totem_hdr_files_abs_path})
 #
 #################
@@ -218,6 +261,24 @@ endforeach(input ${totem_hdr_addon_files_abs_path})
 #
 #################
 #configure_file(${totem_hdr_addon_files_abs_path} ${tcp_hdr_addon_files} COPYONLY)
+message(STATUS " ")
+
+##################
+# copy clanlib config file
+#
+set(list_count)
+set(list_index 0)
+list(LENGTH tcp_clanlib_config_file list_count)
+foreach(input ${totem_clanlib_config_hdr_abs_path})
+	list(GET tcp_clanlib_config_file ${list_index} output)
+	message(STATUS "Evaluating index ${list_index}/${list_count}: ${output}")
+	MATH(EXPR list_index "${list_index}+1")
+	
+	configure_file(${input} ${output} COPYONLY)
+endforeach(input ${totem_clanlib_config_hdr_abs_path})
+#
+#################
+#configure_file(${totem_src_addon_files_abs_path} ${tcp_src_addon_files} COPYONLY)
 message(STATUS "----------------------------------------------")
 
 set(output_files ${tcp_src_files} ${tcp_hdr_files})
@@ -253,7 +314,8 @@ set(SED_CMD18 "s/typename T_Pair\\(.*\\)::Type/std::pair\\1/g")
 set(SED_CMD19 "s/T_Pair\\(.*\\)::Type/std::pair\\1/g")
 set(SED_CMD20 "s/.bind(/.set(/g")
 set(SED_CMD21 "s/delegate->delegate(/delegate->delegate.invoke(/g")
-#set(SED_CMD22 "")
+#set(SED_CMD22 "s/#define USE_MINIMAL_DEPENDS_TYPES/#define USE_CLANLIB_TYPES/g")
+#set(SED_CMD23 "")
 
 function(do_sed comment)
 	foreach(output ${output_files})
@@ -281,6 +343,7 @@ function(do_sed comment)
 							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD20} ${output}
 							COMMAND ${SED_EXECUTABLE} -i ${SED_CMD21} ${output}
 							#COMMAND ${SED_EXECUTABLE} -i ${SED_CMD22} ${output}
+							#COMMAND ${SED_EXECUTABLE} -i ${SED_CMD23} ${output}
 							COMMENT ${comment}
 		)
 	endforeach(output ${output_files})
@@ -291,7 +354,7 @@ do_sed("Preprocessing Totem EDK for ClanLib")
 find_package(ClanLib REQUIRED)
 include_directories(${CL_INCLUDE_PATH})
 
-add_library(TotemEDK_ClanLib STATIC ${tcp_src_files} ${tcp_hdr_files})
+add_library(TotemEDK_ClanLib STATIC ${tcp_src_files} ${tcp_hdr_files} ${tcp_clanlib_config_file})
 
 set_target_properties(TotemEDK_ClanLib PROPERTIES DEBUG_POSTFIX _d)
 set_target_properties(TotemEDK_ClanLib PROPERTIES LINKER_LANGUAGE CXX)
