--- a/trunk/depends/ClanLib/CMakeLists.txt
+++ b/trunk/depends/ClanLib/CMakeLists.txt
@@ -348,8 +348,47 @@ function(do_sed comment)
 		)
 	endforeach(output ${output_files})
 endfunction(do_sed)
+function(do_replace comment)
+	foreach(output ${output_files})
+		FILE(READ "${output}" contents)
+		
+		STRING(REPLACE "T_String" 							"CL_String" 					contents "${contents}")
+		STRING(REPLACE "D32" 								"double" 						contents "${contents}")
+		STRING(REPLACE "F32" 								"float" 						contents "${contents}")
+		STRING(REPLACE "S32" 								"int" 							contents "${contents}")
+		STRING(REPLACE "U32" 								"unsigned int" 					contents "${contents}")
+		
+		STRING(REPLACE "T_PropertyTypeId" 					"unsigned int" 					contents "${contents}")
+		STRING(REPLACE "T_EntityId" 						"unsigned long" 				contents "${contents}")
+		STRING(REPLACE "T_Exception" 						"CL_Exception" 					contents "${contents}")
+		STRING(REPLACE "HAS_SIGNALSLOTS_INHERITANCE_TYPE" 	"" 								contents "${contents}")
+		STRING(REPLACE "NULL_PTR" 							"nullptr" 						contents "${contents}")
+		STRING(REPLACE "typename T_Signal_v0<>::Type" 		"CL_Signal_v0" 					contents "${contents}")
+		STRING(REPLACE ".bind(" 							".set("							contents "${contents}")
+		STRING(REPLACE "delegate->delegate(" 				"delegate->delegate.invoke(" 	contents "${contents}")
+		
+		STRING(REPLACE "typename T_Map" 					"std::unordered_map" 			contents "${contents}")
+		STRING(REPLACE "T_Map" 								"std::unordered_map" 			contents "${contents}")
+		STRING(REPLACE "typename T_SharedPtr" 				"CL_SharedPtr" 					contents "${contents}")
+		STRING(REPLACE "T_SharedPtr" 						"CL_SharedPtr" 					contents "${contents}")
+		STRING(REPLACE "typename T_Vector" 					"std::vector" 					contents "${contents}")
+		STRING(REPLACE "T_Vector" 							"std::vector" 					contents "${contents}")
+		STRING(REPLACE "typename T_Pair" 					"std::pair" 					contents "${contents}")
+		STRING(REPLACE "T_Pair" 							"std::pair" 					contents "${contents}")
+		STRING(REPLACE "::Type" 							"" 								contents "${contents}")
+		STRING(REPLACE ";" 									"\;" 							contents "${contents}")
+		
+		STRING(REGEX REPLACE "typename T_Signal_v(.)"		"CL_Signal_v\\1"				contents "${contents}")
+		STRING(REGEX REPLACE "T_Signal_v(.)"				"CL_Signal_v\\1"				contents "${contents}")
+		
+		message(STATUS " ")
+		message(STATUS "Content of ${output}:\n${contents}")
+		message(STATUS " ")
+		FILE(WRITE ${output} ${contents})
+	endforeach(output ${output_files})
+endfunction(do_replace)
 
-do_sed("Preprocessing Totem EDK for ClanLib")
+do_replace("Preprocessing Totem EDK for ClanLib")
 
 find_package(ClanLib REQUIRED)
 include_directories(${CL_INCLUDE_PATH})
